SERVER-21479 Check if listIndexes can find valid shards